--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dependencies": {
         "child-process": "^1.0.2",
         "dotenv": "^8.2.0",
+        "express": "^4.17.1",
         "googleapis": "^39.2.0",
-        "nodemon": "^2.0.4",
-        "nodemailer": "^6.4.11"
+        "nodemailer": "^6.4.11",
+        "nodemon": "^2.0.4"
     },
     "devDependencies": {},
     "scripts": {
